--- a/index.html
+++ b/index.html
@@ -1,77 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Ubuntu:wght@300;400;700&family=Viaoda+Libre&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="css/estilo.css">
-    <title>Projeto Aprenser</title>
+    
+    <title>projeto Aprenser</title>
 </head>
-
 <body>
-    <header class="header-top">
-        <img class="logotipo" src="imagens/logoAprenser.png" alt="logo">
+    <div class="wrapperContainer-dark">
+        <header class="header">
+            <img src="imagens/logoAprenser.png" alt="Aprenser">
 
-        <nav class="header-nav">
-            <ul>
-                <li><a href="#">Cursos</a></li>
-                <li><a href="#">Nossa escola</a></li>
-                <li><a href="#">Contatos</a></li>
-            </ul>
-        </nav>
-    </header>
+            <nav class="header-nav">
+                <ul>
+                    <li><a href="#cursos">Cursos</a></li>
+                    <li><a href="#escola">Nossa escola</a></li>
+                    <li><a href="#contatos">Contatos</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 
-    <section class="hero">
-        <article class="hero-content">
-            <h1> O saber é o que transforma nosso SER</h1>
-            <p><a href="#">Saiba mais</a></p>
-        </article>
+    <div class="wrapperContainer-hero">
+        <section class="container heroBanner">
+            <h1>O saber que transforma nosso <span class="uppercase">ser</span></h1>
+            <a href="#" class="btn">Saiba mais</a>
+            <img src="imagens/HeroImage.png" alt="Mulher cheirando uma flor">
+        </section> 
+    </div>
 
-        <img src="imagens/HeroImage.png" alt="heroimage">
-    </section>
+    <div class="wrapperContainer-light">
+        <section class="cursosContainer" id="cursos">
+            <h2>Principais Cursos</h2>
+            <div class="cursosContainer">
+                <article class="cursos-card">
+                    <img src="imagens/curso-design.png" alt="Designer Web">
 
-    <section class="container">
-        <h2>Principais Cursos</h2>
+                    <div class="cursos-card_content">
+                        <h3>Design para Web</h3>
+                        <p>O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs atraentes e
+                            funcionais para sites e aplicativos móveis.</p>
+                    </div>
+                </article>
 
-        <div class="container-content">
-            <article class="container-cards">
-                <img src="imagens/curso-design.png" alt="Designer Web">
-                <p class="cards-title">Designer para Web</p>
-                <p class="cards-content">O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs atraentes e
-                    funcionais para sites e aplicativos móveis.
-                </p>
-            </article>
+                <article class="cursos-card">
+                    <img src="imagens/curso-design-1.png" alt="Front End">
 
-            <article class="container-cards">
-                <img src="imagens/curso-design-1.png" alt="Front End Developer">
+                    <div class="cursos-card_content">
+                        <h3>Front End Developer</h3>
+                        <p>Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web, aplicativos
+                            on-line
+                            ou até mesmo aplicações para aparelhos celulares.</p>
+                    </div>
+                </article>
 
-                <p class="cards-title">Front End Developer</p>
-                <p class="cards-content">Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web, aplicativos
-                    on-line
-                    ou até mesmo aplicações para aparelhos celulares
-                </p>
-            </article>
+                <article class="cursos-card">
+                    <img src="imagens/curso-design-2.png" alt="Back End Developer">
 
-            <article class="container-cards">
-                <img src="imagens/curso-design-2.png" alt="Back End Developer">
-                <p class="cards-title">Back End Developer</p>
-                <p class="cards-content">Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de dados e
-                    aprenderá como funciona o protocolo HTTP na prática.
-                </p>
-            </article>
-        </div>
-        <p class="container-btn"><a href="#">Ver mais cursos</a></p>
-    </section>
+                    <div class="cursos-card_content">
+                        <h3>Back End Developer</h3>
+                        <p>Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de dados e
+                            aprenderá como funciona o protocolo HTTP na prática.</p>
+                    </div>
+                </article>
+            </div>
 
-    <section class="about">
-        <img src="imagens/nossa-escola.png" alt="Estudante utilizando o notebook">
+            <a href="#" class="btn">Ver mais cursos</a>
+        </section>
+    </div>
 
-        <article class="about-content">
+    <div class="wrapperContainer-dark2">
+        <section class="container" id="escola">
+            <img src="imagens/nossa-escola.png" alt="Aluna usando notebook">
             <h2>Nossa escola</h2>
             <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de
                 tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de
@@ -79,22 +78,24 @@
                 ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para
                 ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de
                 tecnologia bem-sucedido.</p>
-        </article>
-    </section>
+        </section>
+    </div>
 
-    <section class="contact">
-        <article class="contact-container">
-        <h2>Contatos</h2>
-        <img src="imagens/map.png" alt="Localizacao">
-        <p>Av. da Liberdade, 1001<br>
-            Tel.: +351 21 123 456<br>
-            E-mail: contato@aprenser.com</p>
-        </article>
-    </section>
+    <div class="wrapperContainer-light">
+        <section class="container" id="Contatos">
+            <h2>Contato</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.6997171791704!2d-52.821732125381736!3d-28.45846705955499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd493b24699437%3A0xdb26ce86faa682a9!2sAv.%20Dr.%20Waldomiro%20Graeff%2C%201233%20-%20Centro%2C%20N%C3%A3o-Me-Toque%20-%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v1694790076911!5m2!1spt-BR!2sbr" width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <footer class="rodape">
-        Desenvolvido por Andson Maciel
-    </footer>
+            <address>
+                Av. da Liberdade, 1001<br>
+                Tel.: +351 21 123 456 <br>
+                E-mail: contato@aprenser.com
+            </address>
+        </section>
+    </div>
+
+    <div class="wrapperContainer-dark">
+        <footer>Desenvolvido por <a href="#">Andson Maciel</a></footer>
+    </div>
 </body>
-
 </html>
