inserindo propriedades Normalize.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    
     <title>projeto Aprenser</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto:wght@300;400;700&family=Ubuntu:wght@300;400;700&family=Viaoda+Libre&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
     <div class="wrapperContainer-dark">
         <header class="header">
@@ -25,40 +35,43 @@
             <h1>O saber que transforma nosso <span class="uppercase">ser</span></h1>
             <a href="#" class="btn">Saiba mais</a>
             <img src="imagens/HeroImage.png" alt="Mulher cheirando uma flor">
-        </section> 
+        </section>
     </div>
 
     <div class="wrapperContainer-light">
         <section class="cursosContainer" id="cursos">
             <h2>Principais Cursos</h2>
             <div class="cursosContainer">
-                <article class="cursos-card">
+                <article class="curso-card">
                     <img src="imagens/curso-design.png" alt="Designer Web">
 
                     <div class="cursos-card_content">
                         <h3>Design para Web</h3>
-                        <p>O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs atraentes e
+                        <p>O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs
+                            atraentes e
                             funcionais para sites e aplicativos móveis.</p>
                     </div>
                 </article>
 
-                <article class="cursos-card">
+                <article class="curso-card">
                     <img src="imagens/curso-design-1.png" alt="Front End">
 
                     <div class="cursos-card_content">
                         <h3>Front End Developer</h3>
-                        <p>Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web, aplicativos
+                        <p>Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web,
+                            aplicativos
                             on-line
                             ou até mesmo aplicações para aparelhos celulares.</p>
                     </div>
                 </article>
 
-                <article class="cursos-card">
+                <article class="curso-card">
                     <img src="imagens/curso-design-2.png" alt="Back End Developer">
 
                     <div class="cursos-card_content">
                         <h3>Back End Developer</h3>
-                        <p>Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de dados e
+                        <p>Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de
+                            dados e
                             aprenderá como funciona o protocolo HTTP na prática.</p>
                     </div>
                 </article>
@@ -84,7 +97,10 @@
     <div class="wrapperContainer-light">
         <section class="container" id="Contatos">
             <h2>Contato</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.6997171791704!2d-52.821732125381736!3d-28.45846705955499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd493b24699437%3A0xdb26ce86faa682a9!2sAv.%20Dr.%20Waldomiro%20Graeff%2C%201233%20-%20Centro%2C%20N%C3%A3o-Me-Toque%20-%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v1694790076911!5m2!1spt-BR!2sbr" width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.6997171791704!2d-52.821732125381736!3d-28.45846705955499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd493b24699437%3A0xdb26ce86faa682a9!2sAv.%20Dr.%20Waldomiro%20Graeff%2C%201233%20-%20Centro%2C%20N%C3%A3o-Me-Toque%20-%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v1694790076911!5m2!1spt-BR!2sbr"
+                width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
 
             <address>
                 Av. da Liberdade, 1001<br>
@@ -98,4 +114,5 @@
         <footer>Desenvolvido por <a href="#">Andson Maciel</a></footer>
     </div>
 </body>
+
 </html>
