--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 </head>
 
 <body>
-    <div class="wrapperContainer-dark">
-        <header class="header">
-            <img src="imagens/logoAprenser.png" alt="Aprenser">
+    <div id="topo"></div>
+    <div class="wrapperContainer  wrapperContainer-dark wrapperContainer-fixed">
+        
+        <header class="header container">
+            <a href="#topo"><img src="imagens/logoAprenser.png" alt="Aprenser"></a>
 
-            <nav class="header-nav">
+            <nav class="header_nav">
                 <ul>
                     <li><a href="#cursos">Cursos</a></li>
                     <li><a href="#escola">Nossa escola</a></li>
@@ -30,22 +32,25 @@
         </header>
     </div>
 
-    <div class="wrapperContainer-hero">
+    <div class="wrapperContainer wrapperContainer-hero">
         <section class="container heroBanner">
-            <h1>O saber que transforma nosso <span class="uppercase">ser</span></h1>
-            <a href="#" class="btn">Saiba mais</a>
+            <div class="header_content">
+                <h1>O saber que transforma nosso <span class="upper">ser</span></h1>
+                <a href="#" class="btn">Saiba mais</a>
+            </div>
+
             <img src="imagens/HeroImage.png" alt="Mulher cheirando uma flor">
         </section>
     </div>
 
-    <div class="wrapperContainer-light">
-        <section class="cursosContainer" id="cursos">
-            <h2>Principais Cursos</h2>
+    <div class="wrapperContainer wrapperContainer-light wrapperContainer-padded" id="cursos">
+        <section class="cursos container">
+            <h2 class="section_title">Principais Cursos</h2>
             <div class="cursosContainer">
-                <article class="curso-card">
+                <article class="curso_card">
                     <img src="imagens/curso-design.png" alt="Designer Web">
 
-                    <div class="cursos-card_content">
+                    <div class="cursos_card_content">
                         <h3>Design para Web</h3>
                         <p>O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs
                             atraentes e
@@ -53,10 +58,10 @@
                     </div>
                 </article>
 
-                <article class="curso-card">
+                <article class="curso_card">
                     <img src="imagens/curso-design-1.png" alt="Front End">
 
-                    <div class="cursos-card_content">
+                    <div class="cursos_card_content">
                         <h3>Front End Developer</h3>
                         <p>Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web,
                             aplicativos
@@ -65,10 +70,10 @@
                     </div>
                 </article>
 
-                <article class="curso-card">
+                <article class="curso_card">
                     <img src="imagens/curso-design-2.png" alt="Back End Developer">
 
-                    <div class="cursos-card_content">
+                    <div class="cursos_card_content">
                         <h3>Back End Developer</h3>
                         <p>Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de
                             dados e
@@ -77,41 +82,47 @@
                 </article>
             </div>
 
-            <a href="#" class="btn">Ver mais cursos</a>
+            <a href="#" class="btn section_btn">Ver mais cursos</a>
         </section>
     </div>
 
-    <div class="wrapperContainer-dark2">
-        <section class="container" id="escola">
+    <div class="wrapperContainer wrapperContainer-dark2 wrapperContainer-padded" id="escola">
+        <section class="container escola">
             <img src="imagens/nossa-escola.png" alt="Aluna usando notebook">
-            <h2>Nossa escola</h2>
-            <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de
-                tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de
-                software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um
-                ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para
-                ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de
-                tecnologia bem-sucedido.</p>
+
+            <div class="escola_content">
+                <h2>Nossa escola</h2>
+                <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola
+                    de
+                    tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento
+                    de
+                    software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um
+                    ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias
+                    para
+                    ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional
+                    de
+                    tecnologia bem-sucedido.</p>
+            </div>
         </section>
     </div>
 
-    <div class="wrapperContainer-light">
-        <section class="container" id="Contatos">
-            <h2>Contato</h2>
+    <div class="wrapperContainer wrapperContainer-light wrapperContainer-padded" id="contatos">
+        <section class="container">
+            <h2 class="section_title">Contatos</h2>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.6997171791704!2d-52.821732125381736!3d-28.45846705955499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd493b24699437%3A0xdb26ce86faa682a9!2sAv.%20Dr.%20Waldomiro%20Graeff%2C%201233%20-%20Centro%2C%20N%C3%A3o-Me-Toque%20-%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v1694790076911!5m2!1spt-BR!2sbr"
                 width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-            <address>
-                Av. da Liberdade, 1001<br>
+            <address class="contatos_address">Av. da Liberdade, 1001<br>
                 Tel.: +351 21 123 456 <br>
                 E-mail: contato@aprenser.com
             </address>
         </section>
     </div>
 
-    <div class="wrapperContainer-dark">
-        <footer>Desenvolvido por <a href="#">Andson Maciel</a></footer>
+    <div class="wrapperContainer wrapperContainer-dark">
+        <footer class="footer">Desenvolvido por <a href="#">Andson Maciel</a></footer>
     </div>
 </body>
 
